# ChangeLog for kde-base/kdegraphics-meta
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdegraphics-meta/ChangeLog,v 1.102 2008/09/13 23:58:04 carlo Exp $

*kdegraphics-meta-3.5.10 (13 Sep 2008)

  13 Sep 2008; Carsten Lohrke <carlo@gentoo.org>
  +kdegraphics-meta-3.5.10.ebuild:
  Version bump.

  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
  -kdegraphics-meta-3.5.8.ebuild, -kdegraphics-meta-4.0.2.ebuild,
  -kdegraphics-meta-4.0.3.ebuild:
  Removed old versions.

*kdegraphics-meta-4.0.5 (06 Jun 2008)

  06 Jun 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  +kdegraphics-meta-4.0.5.ebuild:
  Added the KDE 4.0.5 version of kdegraphics-meta.

  18 May 2008; Markus Meier <maekke@gentoo.org>
  kdegraphics-meta-3.5.9.ebuild:
  amd64/x86 stable, bug #221063

*kdegraphics-meta-4.0.4 (15 May 2008)

  15 May 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  +kdegraphics-meta-4.0.4.ebuild:
  Added KDE 4.0.4 version of kdegraphics-meta. Thanks to Jorge Manuel B. S.
  Vicetto.

  14 May 2008; Markus Rothe <corsair@gentoo.org>
  kdegraphics-meta-3.5.9.ebuild:
  Stable on ppc64; bug #221063

  13 May 2008; Jeroen Roovers <jer@gentoo.org>
  kdegraphics-meta-3.5.9.ebuild:
  Stable for HPPA (bug #221063).

  12 May 2008; Brent Baude <ranger@gentoo.org>
  kdegraphics-meta-3.5.9.ebuild:
  Marking kdegraphics-meta-3.5.9 ppc stable for bug 221063

  12 May 2008; Raúl Porcel <armin76@gentoo.org>
  kdegraphics-meta-3.5.9.ebuild:
  alpha/ia64/sparc stable wrt #221063

*kdegraphics-meta-4.0.3 (03 Apr 2008)

  03 Apr 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kdegraphics-meta-4.0.3.ebuild:
  Version bump to KDE 4.0.3. This is still not intended for mainstream so DO
  NOT KEYWORD IT without talking to the KDE herd first.

  20 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -kdegraphics-meta-4.0.1.ebuild:
  Old.

*kdegraphics-meta-4.0.2 (10 Mar 2008)
