@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>kde</herd>
-  <use>
-    <flag name="povray">Install KPovModeler, which needs POV-Ray</flag>
-  </use>
+<use>
+	<flag name="povray">Install <pkg>kde-base/kpovmodeler</pkg>, which needs POV-Ray</flag>
+</use>
+<herd>kde</herd>
 </pkgmetadata>
